<resources>
    <string name="app_name">JsonInator</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="data_loaded">Data have been loaded</string>
    <string name="data_load_fail">Failed to load data</string>
    <string name="data_save_fail">Failed to save data</string>
    <string name="data_saved">Data have been saved</string>
</resources>